feat: added printed ticket and fix db

--- a/booking-form/index.html
+++ b/booking-form/index.html
@@ -23,57 +23,95 @@
 <div class="form-header">
 <h1>Make your reservation</h1>
 </div>
-<form>
-<div class="form-group">
-<input class="form-control" type="text" placeholder="Paese, città...">
-<span class="form-label">Destination</span>
-</div>
+
+<form action="info_booking.php" method="get">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+          <input class="form-control" type="text" name="from" placeholder="From">
+          <span class="form-label">From</span>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+          <input class="form-control" type="text" name="to" placeholder="To">
+          <span class="form-label">To</span>
+      </div>
+    </div>
+    </div>
 <div class="row">
 <div class="col-md-6">
   <div class="form-group">
-      <input class="form-control" type="date" required>
-      <span class="form-label">Check In</span>
+      <input class="form-control" type="datetime-local"  name="check_in" required>
+      <span class="form-label" name="check_in">Check In</span>
   </div>
 </div>
 <div class="col-md-6">
   <div class="form-group">
-      <input class="form-control" type="date" required>
-      <span class="form-label">Check out</span>
+      <input class="form-control" type="datetime-local" name="check_out" required>
+      <span class="form-label" name="check_out">Check out</span>
   </div>
 </div>
 </div>
 <div class="row">
 <div class="col-md-4">
   <div class="form-group">
-      <select class="form-control" required>
-          <option value="" selected hidden>Trasporto</option>
-          <option>Treno</option>
-          <option>Nave</option>
-          <option>Aereo</option>
+      <select class="form-control" name="Trasporto" required>
+          <option value="Trasporto" selected hidden>Trasporto</option>
+          <option value="Treno">Treno</option>
+          <option value="Nave">Nave</option>
+          <option value="Aereo">Aereo</option>
       </select>
       <span class="select-arrow"></span>
       <span class="form-label">Trasporto</span>
   </div>
 </div>
+
 <div class="col-md-4">
   <div class="form-group">
-      <select class="form-control" required>
-          <option value="" selected hidden>Adulti</option>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
+      <select class="form-control" name="Andata/Ritorno" required>
+          <option value="Andata/Ritorno" name="Andata/Ritorno" selected hidden>Andata/Ritorno</option>
+          <option value="Andata">Andata</option>
+          <option value="Andata e Ritorno">Andata e Ritorno</option>
       </select>
       <span class="select-arrow"></span>
       <span class="form-label">Adulti</span>
   </div>
 </div>
+
 <div class="col-md-4">
   <div class="form-group">
-      <select class="form-control" required>
-          <option value="" selected hidden>Bambini</option>
-          <option>0</option>
-          <option>1</option>
-          <option>2</option>
+      <select class="form-control" name="classe" required>
+          <option value=" " name="classe" selected hidden>Classe</option>
+          <option value="Economy">Economy</option>
+          <option value="Business">Business</option>
+      </select>
+      <span class="select-arrow"></span>
+      <span class="form-label">Classe</span>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="form-group">
+      <select class="form-control" name="Adulti" required>
+          <option value="0" name="Adulti" selected hidden>Adulti</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+      </select>
+      <span class="select-arrow"></span>
+      <span class="form-label">Adulti</span>
+  </div>
+</div>
+
+
+<div class="col-md-4">
+  <div class="form-group">
+      <select name="Bambini" class="form-control" required>
+          <option value="0" name="Bambini" selected hidden>Bambini</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
       </select>
       <span class="select-arrow"></span>
       <span class="form-label">Bambini</span>
@@ -83,14 +121,14 @@
 <div class="row">
 <div class="col-md-6">
   <div class="form-group">
-      <input class="form-control" type="email" placeholder=" Email">
+      <input class="form-control" type="email" name="email" placeholder=" Email">
       <span class="form-label">Email</span>
   </div>
 </div>
 <div class="col-md-6">
   <div class="form-group">
-      <input class="form-control" type="tel" placeholder="Telefono">
-      <span class="form-label">Phone</span>
+      <input class="form-control" type="text" name="username" placeholder="Username">
+      <span class="form-label">Username</span>
   </div>
 </div>
 </div>
