--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dream Trip </title>
-    <link rel="stylesheet" href="style_homepage.css">
+    <link rel="stylesheet" href="homepage/style_homepage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -13,7 +13,7 @@
     
 
     <div id="normal-header">
-     <img src="../assets/logo.png" class="navbar-logo"/>
+     <img src="assets/logo.png" class="navbar-logo"/>
   
         <nav id="nav-bar">
           <ul>
@@ -71,7 +71,7 @@
     <div id="hero-header">
       <div id="hero-content">
         <h1 id="hero-title"> Crea la tua vacanza da sogno!</H1>
-        <a href="../booking-form/index.html"><button id="hero-button">Inizia</button></a>
+        <a href="booking-form/index.html"><button id="hero-button">Inizia</button></a>
       </div>
   
     </div>
@@ -140,7 +140,7 @@
   <!-- JavaScript/jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="jquery.js"></script>
-    <script src="script_homepage.js"></script>
+    <script src="homepage/script_homepage.js"></script>
 
 </body>
 </html>
