--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   
       <div id="responsive-header">
         <div id="responsive-logo-button">
-          <a href="#" id="image-link"><img src="../assets/logo.png" alt="Reverse Logo" id="header-img-black"/></a>
+          <a href="#" id="image-link"><img src="assets/logo.png" id="header-img-black"/></a>
           <button id="image-button-black"><img src="https://i.ibb.co/yfM3fdZ/dropdown-menu-black.png" alt="Dropdown Menu" id="dropdown-button-black" /></button>
         
         </div>
