--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
   
     <div id="hero-header">
       <div id="hero-content">
-        <h1 id="hero-title"> Crea la tua vacanza da sogno!</H1>
-        <a href="booking-form/index.html"><button id="hero-button">Inizia</button></a>
+        <h1 id="hero-title"> Prenota la tua vacanza da sogno!</H1>
+        <a href="http://localhost:3000"><button id="hero-button">Inizia</button></a>
       </div>
   
     </div>
