fix: layout and ticket

--- a/flight-search/public/Ticket.html
+++ b/flight-search/public/Ticket.html
@@ -38,15 +38,15 @@
                </div>
                <div class="item">
                   <span>Departure</span>
-                 <h3></h3>
+                 <h3>16:00</h3>
                </div>
                <div class="item">
                   <span>Gate Closes</span>
                   <h3>15:03</h3>
                </div>
                <div class="item">
-                  <span>Luggage</span>
-                  <h3>Hand Luggage</h3>
+                  <span>Class</span>
+                  <h3>Economy</h3>
                </div>
                <div class="item">
                   <span>Seat</span>
@@ -54,9 +54,9 @@
                </div>
             </div>
          </div>
-      
+
          <div class="receipt qr-code">
-           <img src="../../assets/Check-Ticket.png" width="80" height="80" alt="">
+         <img class="qrcode" src="Check-Ticket.png"  width="80" height="80">
             <div class="description">
                <p>Show QR-code when requested</p>
             </div>
